tests/expectations/compiler/structs/struct_contains_record_fail.out
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:4:5
     |
   4 |     token: Token,
     |     ^^^^^
     |
     = Remove the record `Token` from `Foo`.
Error [ETYC0372058]: Cyclic dependency between composites: `Token` --> `Foo` --> `Token`
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:7:9
     |
   7 | program test.aleo {
     |         ^^^^^^^^^
